fix: Adjust font-size on small screens

--- a/src/components/Sidebar/Navbar/Navbar.scss
+++ b/src/components/Sidebar/Navbar/Navbar.scss
@@ -114,7 +114,7 @@
       }
 
       .active {
-        font-size: min(3vh, 24px);
+        font-size: min(2.95vh, 24px);
       }
     }
 
